# mcp-context-forge

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Containerfile.lite  MANIFEST.in  Makefile  README.md  coverage_output.txt  docker-compose-debug.yml  docker-compose-performance.yml  docker-compose-verbose-logging.yml  docker-compose.yml  pyproject.toml  run-granian.sh  run-gunicorn.sh
charts/mcp-stack/: Makefile  README.md  values.schema.json  values.yaml
charts/mcp-stack/templates/: _helpers.tpl  configmap-postgres.yaml  configmap-redis.yaml  deployment-mcpgateway.yaml  deployment-pgadmin.yaml  deployment-postgres.yaml  deployment-redis-commander.yaml  deployment-redis.yaml  ingress.yaml  job-migration.yaml  job-postgres-backup.yaml  job-postgres-migration-check.yaml  postgres-pvc.yaml  redis-pvc.yaml  secret-pgadmin.yaml  service-mcp.yaml  service-redis-commander.yaml  service-redis.yaml  servicemonitor-mcpgateway.yaml
deployment/: AGENTS.md
docs/: AGENTS.md  config.schema.json  requirements.txt
docs/docs/: config.schema.json  index.md
docs/docs/architecture/: plugins.md  security-features.md
docs/docs/architecture/adr/: 004-combine-jwt-and-basic-auth.md  037-external-plugin-stdio-launch.md  index.md
docs/docs/deployment/: .pages  compose.md  container.md  helm.md  kubernetes.md  local.md  tls-configuration.md
docs/docs/development/: developer-onboarding.md  index.md  review.md
docs/docs/faq/: index.md
docs/docs/manage/: .pages  api-usage.md  configuration.md  export-import-reference.md  export-import-tutorial.md  export-import.md  proxy.md  scale.md  securing.md  troubleshooting.md
docs/docs/overview/: quick_start.md  ui.md
docs/docs/testing/: acceptance.md  performance.md
docs/docs/tutorials/: argocd-helm-deployment-ibm-cloud-iks.md  dcr-hyprmcp.md  openwebui-tutorial.md
docs/docs/using/plugins/: index.md  lifecycle.md  mtls.md
infra/nginx/: Dockerfile  docker-entrypoint.sh  nginx-tls.conf  nginx.conf
llms/: api.md  mcp-server-go.md  mcp-server-python.md  mcpgateway.md  plugins-llms.md  testing.md
mcp-servers/: AGENTS.md
mcpgateway/: admin.py  auth.py  cli_export_import.py  config.py  db.py  main.py  schemas.py  version.py
mcpgateway/alembic/versions/: 20260203_191246_add_policy_engine_tables_phase1.py  b1b2b3b4b5b6_fix_constraints.py
mcpgateway/common/: validators.py
mcpgateway/middleware/: rbac.py
mcpgateway/plugins/framework/: constants.py  manager.py  models.py
mcpgateway/routers/: cancellation_router.py  email_auth.py  llm_admin_router.py  llm_config_router.py  log_search.py  oauth_router.py  observability.py  rbac.py  reverse_proxy.py  sso.py  teams.py  tokens.py  toolops_router.py
mcpgateway/services/: a2a_service.py  dcr_service.py  email_auth_service.py  export_service.py  gateway_service.py  import_service.py  performance_service.py  plugin_service.py  policy_engine.py  prompt_service.py  resource_service.py  root_service.py  server_service.py  team_management_service.py  tool_service.py
mcpgateway/templates/: login.html
mcpgateway/transports/: streamablehttp_transport.py
mcpgateway/utils/: error_formatter.py  ssl_key_manager.py  verify_credentials.py
plugins/: AGENTS.md  config.yaml
plugins/html_to_markdown/: html_to_markdown.py
plugins/robots_license_guard/: robots_license_guard.py
plugins/toon_encoder/: README.md  __init__.py  plugin-manifest.yaml  toon.py  toon_encoder.py
plugins/unified_pdp/: README.md  __init__.py  adapter.py  cache.py  default_rules.json  pdp.py  pdp_models.py  unified_pdp.py
plugins/unified_pdp/engines/: __init__.py  cedar_engine.py  mac_engine.py  native_engine.py  opa_engine.py
scripts/: test_email_auth_api.py
tests/: AGENTS.md  conftest.py
tests/e2e/: test_main_apis.py
tests/jmeter/: README.md  admin_ui_baseline.jmx  load_test.jmx  mcp_jsonrpc_baseline.jmx  mcp_test_servers_baseline.jmx  rest_api_baseline.jmx  soak_test.jmx  spike_test.jmx  sse_streaming_baseline.jmx  stress_test.jmx  websocket_baseline.jmx
tests/jmeter/data/: test_messages.csv  timezones.csv  tool_names.csv
tests/jmeter/properties/: ci.properties  production.properties
tests/loadtest/: locustfile.py
tests/manual/: generate_test_plan.py
tests/playwright/: README.md  conftest.py  test_admin_ui.py  test_auth.py  test_htmx_interactions.py
tests/playwright/entities/: test_tools.py
tests/playwright/pages/: admin_page.py  base_page.py
tests/security/: test_input_validation.py  test_rpc_endpoint_validation.py  test_security_headers.py
tests/unit/mcpgateway/: test_admin.py  test_admin_catalog_htmx.py  test_admin_import_export.py  test_admin_module.py  test_auth.py  test_cli_export_import_coverage.py  test_db.py  test_final_coverage_push.py  test_main.py  test_main_extended.py  test_main_helpers.py  test_main_helpers_extra.py  test_multi_auth_headers.py  test_schemas.py  test_schemas_auth_validation.py  test_schemas_validators_extra.py  test_toolops_utils.py  test_translate_grpc_helpers.py  test_translate_header_utils.py  test_translate_helpers.py  test_well_known.py
tests/unit/mcpgateway/cache/: test_session_registry.py
tests/unit/mcpgateway/middleware/: test_compression.py  test_db_query_logging.py  test_protocol_version.py  test_rbac.py  test_request_context.py  test_token_scoping_extra.py
tests/unit/mcpgateway/routers/: test_email_auth_helpers.py  test_email_auth_router.py  test_llm_admin_router.py  test_llm_config_router.py  test_llm_proxy_router.py  test_llmchat_router.py  test_log_search_helpers.py  test_oauth_router.py  test_reverse_proxy.py
tests/unit/mcpgateway/services/: test_a2a_query_param_auth.py  test_email_auth_basic.py  test_gateway_service_helpers.py  test_grpc_service_no_grpc.py  test_llm_provider_service.py  test_llm_proxy_service.py  test_log_aggregator_helpers.py  test_mcp_chat_history_extra.py  test_row_level_locking.py  test_tool_service.py  test_tool_service_helpers.py
tests/unit/mcpgateway/transports/: test_sse_transport.py  (+1 more)
tests/unit/plugins/: test_unified_pdp.py  test_unified_pdp_plugin.py
tests/unit/services/: test_policy_engine.py
(+16 files in other folders)
